# KineOrbits

./: .gitignore  Makefile  Makefile.am  Makefile.am.old  Makefile.in  autogen.sh  confdefs.h  config.h  config.h.in  config.status  configure  configure.in
lib/include/: COPYING  IERS.h  Makefile  Makefile.am  Makefile.am~  Makefile.in  config.h  config.status  configure  configure.in  grdtab.h  model.h
lib/include/autom4te.cache/: output.1  requests  traces.0  traces.1
lib/lib_corr/: ARG.f  FCUL_a.f  FCUL_b.f  Makefile  Makefile.am  Makefile.am~  Makefile.in  PMsdnut.for  config.status  configure  configure.in  dehanttideinel.f  fcnnut090701.f  fcul_ztd_hPa.f  ffun.f~  get_otl_grid.f  get_otl_list.f  gmf.f  gpt.f  grdtab_bd.f  hardisp.f  ocearg.f  ocearg2.f  ortho_eop.f  otl.f  otl.f~  otlcmc.f  otlgrdtab.f~  pole_tide.f  read_otl_grid.f  read_otl_list.f  saaszd.f  solid_earth_tides.f  swap_bytes.f  trop_hydro_zpd.f  vmf1.f  wpress.f
lib/lib_corr/autom4te.cache/: output.0  requests  traces.0  traces.1
lib/lib_iau/: Makefile  Makefile.am  Makefile.am~  Makefile.generic~  Makefile.in  config.status  configure  configure.in  configure.in~  iau_gst94.f  iau_pnm80.f  iau_pom.f  manual.lis
lib/lib_iau/autom4te.cache/: output.1  traces.0  traces.1
lib/lib_timesys/: Makefile  Makefile.am  Makefile.generic  Makefile.in  cal2ch.f  cal2gps.f  cal2jd.f  cal2sec.f  caschg.f  ch2cal.f  ch2dp.f  ch2dpx.f  ch2int.f  ch2jd.f  ch2sec.f  config.status  configure  configure.in  date2j.f  diff_tai2utc.f  gps2cal.f  gps2utc.f  gpslpsec.f  int2ch.f  j2date.f  jd2cal.f  jd2cald.f  jd2sec.f  jdref.f  leapsec.f  sec2cal.f  sec2ch.f  sec2jd.f  sec2jdd.f  sec2mjd.f  utc2gps.f
lib/lib_timesys/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
src/Formatrs/: Makefile  Makefile.am  Makefile.am~  Makefile.in  config.status  configure  configure.in  find_rnxhdr.f  getargvs.f  merge_sp3  merge_sp3.f  parse_conf.f  pomtrs.f  pomtrs.f~  read_leo_sp3.f  read_leo_sp3.f~  read_sp3.f~  rnxhdr.f~  rnxobs.f  rnxobs.f~  rnxtrs  rnxtrs.bash  rnxtrs.f~  sp3trs  sp3trs.f  sp3trs.f~  write_pos.f~
src/Formatrs/autom4te.cache/: output.0  output.1  (+5 more)
src/Phasedif/: :w  Makefile  Makefile.am  Makefile.am~  Makefile.in  Phasedif  Phasedif.bash  Phasedif.bash~  Phasedif.f~  comps_xvobseq.f  config.status  configure  corr_rcv.f  corr_rcv_pco.f  corr_trs.f~  corr_trs_pco.f  phasediflib.f  ppos.f  read_atx.f  solve_xvobseq.f~  xv_OMC.f~  xv_coeff.f~  xv_ini.f~  xv_residual.f  xv_weight.f
src/SmartPPP-1.1/: Makefile.am  Makefile.in  OMC.f  PPPKAL.f.pre  PPPKAL.f~  README  README~  SmartPPP  SmartPPP.bash~  SmartPPP.f  SmartPPP.f~  apriori_statvar_weight.f  chlinv.f  coeff2.f  compsObsEq.f  compsObsEq1.f  compsObsEqXV.f  config.status  configure  configure.in  corr_ant_off.f  corr_ant_off.f~  corr_rcv.f~  corr_rcv_pco.f  corr_rcv_pco.f~  corr_trs_pco.f  fspak.ord  getargvs.f  gps2xyz.f  hpx2itr.f  mtxvec.f  read_atx.f  read_atx.f~  read_sp3.f  rhpxhdr.f  rhpxobs.f  sort.f  weight.f  x_elv.f  x_ini.f  (+2 more)
src/SmartSPP/: .read_att.f.swp  Makefile  Makefile.am  Makefile.in  OMC1.f  SmartSPP  SmartSPP.bash  SmartSPP.bash~  SmartSPP.f  coeff1.f  compsObsEq1.f  compsObsEq1.f~  config.status  corr_ant_off.f  corr_ant_off.f~  corr_rcv.f  corr_rcv_pco.f  corr_rcv_pco.f~  corr_trs.f~  corr_trs_pco.f  filelist.EPH  filelist.att  filelist.cln  filelist.spp  filelist.spp.new  filelist.spp~  gps2xyz.f  hpx2itr.f  lagrange.f  ppos.f  ppos.f~  read_att.f~  read_atx.f  read_atx.f~  residual.f  residual.f~  x_convgd1.f  x_elv.f  x_ini1.f  x_ini1.f~  (+1 more)
src/qc/: Makefile  Makefile.am  Makefile.am~  Makefile.in  QUALE  QUALE.bash  QUALE.bash~  QUALE.f  QUALE.f~  arc_conj.f  arc_info.f  config.status  configure  extrobs.f  filelist.rnx  fit.asv  fit.m  gaussj.f  hpx2itr.f  ionos_N12fit.f  ionos_filter.f  itr2hpx.f  itr2hpx.f~  linear_combine.f  merge_hpxobs.f  merge_lflag.f  polyfit.f  prescr.f  qualelib.f  qualelib.f~  rhpxhdr.f  snrscr.f  vecrvsr.f  whpxhdr.f  whpxobs.f  wlamb_filter.f
src/qc_spaceborne/: Makefile  Makefile.am  Makefile.in  README  abnml_filter.f  codescr.f  config.status  diff1_filter.f  diff1_rcv.f  diff5_filter.f  diff5_solve.f  example1  example2  extrobs.f  hpx2itr.f  itr2hpx.f  linear_combine.f  merge_hpxobs.f  merge_lflag.f  parse_conf.f  qualicontr  qualicontr.f  qualicontrlib.f  rhpxhdr.f  rhpxobs.f  summary1.f  summary2.f  vecrvsl.f  whpxhdr.f  whpxobs.f  wlamb_filter.f  write_iflag.f
tests/: Makefile  Makefile.am  Makefile.am~  Makefile.in  casefold.f  caseunfold.f  check_ascii.f  config.status  configure  configure.in  dvdot.f  dvswp.f  kalman.f  orbit_element  orbit_element.f  program_utc2gps  program_utc2gps.f  rcpar.f  report_stat.f  rotate_geod.f  state2element_test.f  systime_intel.f  test_neu2xyz  test_neu2xyz.f  test_otl  test_otl.f  test_otl.f~  test_pole_tide  test_pole_tide.f  test_solid_tide  test_solid_tide.f  test_solid_tide.f~  test_xyz2geod  test_xyz2geod.f  trimlen.f  xyz2geod.f  xyz_orbit  xyz_orbit.f  xyz_to_geod.f
tests/Newcode/: Makefile  Makefile.am  Makefile.am~  Makefile.in  arcsta.f  config.status  configure  configure.in  diff.f  diff5_solve1.f  diff5_solve1.f~  extrobs.f~  hpx2itr.f  hpxhdr.f  itr2hpx.f  itr2hpx.f~  merge_hpxobs.f  merge_hpxobs.f~  newcode  newcode.bash  newcode.bash~  newcode.f  newcode.f~  newcodelib.f  parse_conf.f  res2itr.f  res2itr.f~  rhpxhdr.f  rhpxobs.f  rhpxres.f~  whpxhdr.f~  whpxobs.f
tests/autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
tool/orbit_convert/: GPS1B_2004-08-07_B_00.rst.dif.rac  GPS1B_2004-08-14_B_00.rst.dif.rac  GPS1B_2004-08-14_B_00.rst.dif.rac.sta  GPS1B_2004-08-14_B_00.rst.dif.sta  GPS1B_2004-08-28_B_00.rst.dif.rac  Makefile  Makefile.am  Makefile.am~  Makefile.in  config.status  configure  configure.in  configure.scan  filelist.dif.rac  filelist.orbcvt  filelist.orbcvt.kal  filelist.orbcvt.kal~  filelist.orbcvt_new  filelist.orbcvt_new~  filelist.rst  filelist.statis  getopts.f  orbit_convert  orbit_convert.bash  orbit_convert.bash~  orbit_convert.f~  rinex.params  zz
(+1073 files in other folders)
