#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.60)
AC_INIT(hopes, 1.0, whuzhshj@163.com)
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE("hopes","1.0")

# Checks for programs.
AC_PROG_F77([gfortran])
AC_PROG_MAKE_SET
AC_PROG_RANLIB

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [main])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([floor modf pow sqrt])

AC_CONFIG_FILES([Makefile
                 lib/Makefile
                 src/Makefile
                 src/apps/Makefile])
AC_CONFIG_SUBDIRS([include
				   lib/include
				   lib/lib_coordsys
                   lib/lib_iau
                   lib/lib_kepler
                   lib/lib_matrix_vector
                   lib/lib_timesys
                   src/apps/coordtrs
                   tables])
AC_OUTPUT
