#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.60)
AC_INIT(iers, 1.0, whuzhshj@163.com)
AC_CONFIG_SRCDIR([IERS.h])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(iers,1.0)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
