lib_LIBRARIES=lib_corr.a
lib_corr_a_SOURCES=dehanttideinel.f otl.f otlgrdtab.f read_otl_grid.f get_otl_grid.f otlcmc.f grdtab_bd.f swap_bytes.f ocearg.f ocearg2.f pole_tide.f solid_earth_tides.f trop_hydro_zpd.f ffun.f gmf.f
INCLUDES=../include ../../include
lib_corr_a_LIBADD=/Volumes/Home/Develop/hopes_dev/lib/lib_iau/lib_iau.a  /Volumes/Home/Develop/hopes_dev/lib/lib_matrix_vector/lib_matrix_vector.a ../lib_timesys/lib_timesys.a /Volumes/Home/Develop/hopes_dev/lib/lib_timesys/lib_timesys.a 
#lib_corrincludedir=$(includedir)/lib
#lib_corrinclude_HEADERS=$(top_srcdir)/lib/include/IERS.h
