lib_LIBRARIES=lib_iau.a
lib_iau_a_SOURCES=iau_a2af.f iau_anp.f iau_anpm.f iau_bi00.f iau_bp00.f iau_bpn2xy.f iau_c2i00a.f iau_c2ibpn.f iau_c2ixy.f iau_c2ixys.f iau_c2t00a.f iau_c2tceo.f iau_c2teqx.f iau_cal2jd.f iau_cp.f iau_cr.f iau_dat.f iau_ee00.f iau_ee00a.f iau_eect00.f iau_eqeq94.f iau_era00.f iau_gmst00.f iau_gmst82.f iau_gst00a.f iau_gst94.f iau_ir.f iau_numat.f iau_nut00a.f iau_nut80.f iau_nutm80.f iau_obl80.f iau_pmat76.f iau_pn00.f iau_pn00a.f iau_pnm00a.f iau_pnm80.f iau_pom.f iau_pom00.f iau_pr00.f iau_prec76.f iau_rx.f iau_rxr.f iau_ry.f iau_rz.f iau_s00.f iau_sp00.f iau_xys00a.f iau_zr.f
