bin_PROGRAMS=rnxtrs merge_sp3 sp3trs
rnxtrs_SOURCES=rnxtrs.f rnxhdr.f getargvs.f parse_conf.f find_rnxhdr.f rnxobs.f
rnxtrs_LDADD=/Volumes/Home/Develop/hopes_dev/lib/lib_iau/lib_iau.a /Volumes/Home/Develop/hopes_dev/lib/lib_matrix_vector/lib_matrix_vector.a /Volumes/Home/Develop/hopes_dev/lib/lib_timesys/lib_timesys.a /Volumes/Home/Develop/hopes_dev/lib/lib_kepler/lib_kepler.a /Volumes/Home/Develop/hopes_dev/lib/lib_coordsys/lib_coordsys.a
merge_sp3_SOURCES=merge_sp3.f getargvs.f sort.f lsearch.f
sp3trs_SOURCES=sp3trs.f read_leo_sp3.f getargvs.f lsearch.f  timestamp.f write_pos.f
sp3trs_LDADD=/Volumes/Home/Develop/hopes_dev/lib/lib_iau/lib_iau.a /Volumes/Home/Develop/hopes_dev/lib/lib_matrix_vector/lib_matrix_vector.a /Volumes/Home/Develop/hopes_dev/lib/lib_timesys/lib_timesys.a /Volumes/Home/Develop/hopes_dev/lib/lib_kepler/lib_kepler.a /Volumes/Home/Develop/hopes_dev/lib/lib_coordsys/lib_coordsys.a
