bin_PROGRAMS=Phasedif
Phasedif_SOURCES=Phasedif.f getargvs.f parse_conf.f rhpxhdr.f timestamp.f hpx2itr.f rhpxobs.f phasediflib.f xv_dim.f xv_ini.f xv_update.f read_sp3.f comps_xvobseq.f lsearch.f corr_rcv.f read_clk.f read_pos.f read_att.f read_atx.f lagrange.f corr_trs.f lagrange_deriv.f binary_search.f linterp.f corr_rcv_pco.f corr_trs_pco.f distance.f earth_rotation.f gps2xyz.f xv_weight.f xv_coeff.f x_elv.f xv_OMC.f solve_xvobseq.f xv_convgd.f xv_wrt.f xv_residual.f
Phasedif_LDADD=/Volumes/Home/Develop/hopes_dev/lib/lib_iau/lib_iau.a /Volumes/Home/Develop/hopes_dev/lib/lib_matrix_vector/lib_matrix_vector.a /Volumes/Home/Develop/hopes_dev/lib/lib_timesys/lib_timesys.a /Volumes/Home/Develop/hopes_dev/lib/lib_kepler/lib_kepler.a /Volumes/Home/Develop/hopes_dev/lib/lib_coordsys/lib_coordsys.a
