bin_PROGRAMS=SmartPPP 
SmartPPP_SOURCES=SmartPPP.f getargvs.f parse_conf.f rhpxhdr.f timestamp.f hpx2itr.f PPPLSQ.f rhpxobs.f read_sp3.f lsearch.f corr_rcv.f read_clk.f read_att.f read_atx.f read_pos.f lagrange.f corr_trs.f lagrange_deriv.f binary_search.f linterp.f corr_ant_off.f corr_rcv_pco.f corr_trs_pco.f distance.f earth_rotation.f phase_windup.f gps2xyz.f  x_elv.f x_dim.f x_ini.f x_update.f solveObsEq.f compsObsEq.f coeff.f weight.f OMC.f x_convgd.f x_wrt.f apriori.f apriori_coeff.f apriori_OMC.f apriori_weight.f read_svr.f apriori_statvar.f apriori_statvar_coeff.f apriori_statvar_weight.f apriori_statvar_OMC.f PPPKAL.f STATVAR.f xv_coeff.f xv_weight.f xv_OMC.f xv_dim.f xv_ini.f xv_update.f xv_convgd.f xv_residual.f solveObsEqXV.f compsObsEqXV.f compsObsEq2.f weight2.f OMC2.f coeff2.f maxbxc.f chlinv.f mtxvec.f vecmtx.f cholesky.f PPOSSUB.f x_dim1.f x_ini1.f x_update1.f x_convgd1.f compsObsEq1.f solveObsEq1.f coeff1.f OMC1.f weight1.f
SmartPPP_LDADD=/Volumes/Home/Develop/hopes_dev/lib/lib_iau/lib_iau.a /Volumes/Home/Develop/hopes_dev/lib/lib_matrix_vector/lib_matrix_vector.a /Volumes/Home/Develop/hopes_dev/lib/lib_timesys/lib_timesys.a /Volumes/Home/Develop/hopes_dev/lib/lib_kepler/lib_kepler.a /Volumes/Home/Develop/hopes_dev/lib/lib_coordsys/lib_coordsys.a /Volumes/Home/Develop/hopes_dev/lib/lib_SparseM/lib_SparseM.a /Volumes/Home/Develop/hopes_dev/lib/lib_fspak/lib_fspak.a
