bin_PROGRAMS=SmartSPP
SmartSPP_SOURCES=SmartSPP.f getargvs.f parse_conf.f rhpxhdr.f timestamp.f hpx2itr.f rhpxobs.f ppos.f x_dim1.f x_ini1.f x_update1.f read_sp3.f compsObsEq1.f lsearch.f corr_rcv.f read_clk.f read_att.f read_atx.f lagrange.f corr_trs.f lagrange_deriv.f binary_search.f linterp.f corr_rcv_pco.f corr_trs_pco.f distance.f earth_rotation.f gps2xyz.f weight1.f coeff1.f x_elv.f OMC1.f solveObsEq1.f x_convgd1.f x_wrt1.f residual.f corr_ant_off.f  
SmartSPP_LDADD=/Volumes/Home/Develop/hopes_dev/lib/lib_iau/lib_iau.a /Volumes/Home/Develop/hopes_dev/lib/lib_matrix_vector/lib_matrix_vector.a /Volumes/Home/Develop/hopes_dev/lib/lib_timesys/lib_timesys.a /Volumes/Home/Develop/hopes_dev/lib/lib_kepler/lib_kepler.a /Volumes/Home/Develop/hopes_dev/lib/lib_coordsys/lib_coordsys.a /Volumes/Home/Develop/hopes_dev/lib/lib_corr/lib_corr.a
