bin_PROGRAMS=QUALE
QUALE_SOURCES=QUALE.f getargvs.f parse_conf.f hpx2itr.f rhpxhdr.f rhpxobs.f extrobs.f linear_combine.f qualelib.f snrscr.f write_iflag.f wlamb_filter.f arc_info.f arc_conj.f  vecrvsr.f vecrvsl.f prescr.f summary1.f summary2.f merge_hpxobs.f whpxobs.f itr2hpx.f whpxhdr.f  merge_lflag.f ionos_N12fit.f gaussj.f polyfit.f ionos_filter.f
QUALE_LDADD=../../lib/lib_iau/lib_iau.a ../../lib/lib_matrix_vector/lib_matrix_vector.a ../../lib/lib_timesys/lib_timesys.a ../../lib/lib_kepler/lib_kepler.a ../../lib/lib_coordsys/lib_coordsys.a
