bin_PROGRAMS=orbit_convert
orbit_convert_SOURCES=orbit_convert.f getopts.f 
orbit_convert_LDADD=/Volumes/Home/Develop/hopes_dev/lib/lib_iau/lib_iau.a /Volumes/Home/Develop/hopes_dev/lib/lib_matrix_vector/lib_matrix_vector.a /Volumes/Home/Develop/hopes_dev/lib/lib_timesys/lib_timesys.a /Volumes/Home/Develop/hopes_dev/lib/lib_kepler/lib_kepler.a /Volumes/Home/Develop/hopes_dev/lib/lib_coordsys/lib_coordsys.a /Volumes/Home/Develop/hopes_dev/lib/lib_SparseM/lib_SparseM.a /Volumes/Home/Develop/hopes_dev/lib/lib_fspak/lib_fspak.a
